--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,7 +87,7 @@
                 <a href="/accounts/setup" class="nav-link">アカウント設定</a>
               </li>
               <li class="nav-item">
-                <a href="/accounts/setup" class="nav-link">スケジュール設定</a>
+                <a href="/schedules/setup" class="nav-link">スケジュール設定</a>
               </li>
               <li class="nav-item">
                 <a href="/users/sign_out" class="nav-link">ログアウト</a>
