--- a/app/views/lists/setup.html.erb
+++ b/app/views/lists/setup.html.erb
@@ -17,26 +17,28 @@
             <%= submit_tag '登録済みデータ確認', class: 'btn btn-primary', style:'margin-right:20px;' %>
 
             <label style="vertical-align:middle;">
-            <span class="btn btn-info" style="width:180px;">
-              出品ファイル登録
+            <span class="btn btn-info" style="width:140px;">
+              データ登録
               <input type="file" name="list_data" onChange="$('#lists_import').submit();" style="display:none;">
             </span>
             </label>
 
-            <%= submit_tag 'データ選択', class: 'btn btn-danger', style:'margin-left:20px;' %>
+            <%= submit_tag '実行データ選択', class: 'btn btn-danger', style:'margin-left:20px;' %>
 
           </div>
         <% end %>
         </div>
         <br>
 
-        <table class="table table-striped table-hover table-bordered" style="width:600px; table-layout:fixed;">
+        <table class="table table-striped table-hover table-bordered" style="width:900px; table-layout:fixed;">
           <thead class="thead-light">
             <tr>
               <th style="width:100px;">データ登録状況</th>
               <th style="width:200px;">登録済み</th>
               <th style="width:200px;">未使用</th>
               <th style="width:100px;"><b>選択中</b></th>
+              <th style="width:150px;">実行日時</th>
+              <th style="width:150px;">フィードID</th>
             </tr>
           </thead>
           <tbody>
@@ -45,12 +47,16 @@
               <td><%= @reg_new %></td>
               <td><%= @not_new %></td>
               <td><b><%= @select_new %></b></td>
+              <td><%= @account.new_upload %></td>
+              <td><%= @account.new_feed_id %></td>
             </tr>
             <tr>
               <td>出品削除</td>
               <td><%= @reg_del %></td>
               <td><%= @not_del %></td>
               <td><b><%= @select_del %></b></td>
+              <td><%= @account.del_upload %></td>
+              <td><%= @account.del_feed_id %></td>
             </tr>
           </tbody>
         </table>
